--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "Fira";
+  font-weight: 400;
+  src: url("../public/fonts/FiraSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 400;
+  src: url("../public/fonts/Montserrat-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Fira";
+  font-weight: 700;
+  src: url("../public/fonts/FiraSans-Bold.ttf");
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +29,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  outline: none;
 }
